Fixed horizontal list overflow-y

--- a/sass/_horizontal-list.scss
+++ b/sass/_horizontal-list.scss
@@ -6,6 +6,7 @@
   overflow-x: auto;
   min-height: max-content;
   padding: 5px 0;
+  overflow-y: hidden;
   .list-element {
     @include flex-column;
 
